--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 joblib==1.4.2
 matplotlib==3.10.3
 pandas==1.3.3
-scikit_learn==1.7.0
-streamlit==1.45.1
+scikit-learn==1.0.2
+streamlit==1.25.0
 xgboost==1.5.2
 yfinance==0.2.63
