--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 pandas==1.5.3
 scikit-learn==1.2.2
-xgboost==1.7.6
-joblib==1.2.0
+streamlit==1.45.1
 matplotlib==3.7.1
-yfinance==0.2.28
-streamlit==1.25.0
+joblib==1.4.2
+xgboost==1.5.2
+yfinance==0.2.63
+pillow==9.5.0
